fix: adjust spacing between message border and drawer - MEED-8526 - Meeds-io/MIPs#163

--- a/webapp/src/main/webapp/css/matrix.less
+++ b/webapp/src/main/webapp/css/matrix.less
@@ -215,10 +215,17 @@
     .chat-message-from-self {
       border-radius: 16px;
       margin-left: auto;
+      .message-file-name {
+        max-width: 316px !important;
+      }
     }
 
     .chat-message-from-others {
       border-radius: 16px;
+
+      .message-file-name {
+        max-width: 304px !important;
+      }
     }
 
     .my-message-text {
